--- a/src/Net.Chdk.Watchers.Volume/Net.Chdk.Watchers.Volume.csproj
+++ b/src/Net.Chdk.Watchers.Volume/Net.Chdk.Watchers.Volume.csproj
@@ -35,8 +35,8 @@
     <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions, Version=1.1.1.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Microsoft.Extensions.DependencyInjection.Abstractions.1.1.1\lib\netstandard1.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
     </Reference>
-    <Reference Include="Net.Chdk.Watchers.Volume.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Net.Chdk.Watchers.Volume.Core.0.1.0-alpha\lib\netstandard1.0\Net.Chdk.Watchers.Volume.Core.dll</HintPath>
+    <Reference Include="Net.Chdk.Watchers.Volume.Core, Version=0.2.0.0">
+      <HintPath>..\..\..\packages\Net.Chdk.Watchers.Volume.Core.0.2.0-alpha\lib\netstandard1.0\Net.Chdk.Watchers.Volume.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
